--- a/index.html
+++ b/index.html
@@ -295,8 +295,13 @@
                                             Infrastructure, Virtualization, System Design
                                         </li>
                                         <li>
-                                            <strong>project: </strong>
+                                            <strong>project</strong>
+                                        </li>
+                                        <li>
                                             (금오사이) 교내 풋살장 예약 서비스 개발 및 운영
+                                        </li>
+                                        <li>
+                                            myeochil-js - npm library that provides holiday && lunar-solar conversion
                                         </li>
                                         <li>
                                             <strong>E-mail:</strong>
@@ -335,7 +340,7 @@
                                         </li>
                                         <li>
                                             <strong>project: </strong>
-                                            
+                                            null
                                         </li>
                                         <li>
                                             <strong>E-mail:</strong>
@@ -374,7 +379,7 @@
                                         </li>
                                         <li>
                                             <strong>project: </strong>
-                                            ㅇㅇ
+                                            null
                                         </li>
                                         <li>
                                             <strong>E-mail:</strong>
@@ -409,15 +414,15 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Interest:</strong>
-                                            적어
+                                            Stateful Game Server, Unity, Unreal 
                                         </li>
                                         <li>
                                             <strong>project: </strong>
-                                            ㅇㅇ
+                                            null
                                         </li>
                                         <li>
                                             <strong>E-mail:</strong>
-                                            ㅇㅇ
+                                            20taetae00@gmail.com
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -431,87 +436,6 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio item 5 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p class="item-intro text-muted">UnderGraduate</p>
-                                    <p>Computer Engineering, 22</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Interest:</strong>
-                                            적어
-                                        </li>
-                                        <li>
-                                            <strong>project: </strong>
-                                            ㅇㅇ
-                                        </li>
-                                        <li>
-                                            <strong>E-mail:</strong>
-                                            ㅇㅇ
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        닫기
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio item 6 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p class="item-intro text-muted">UnderGraduate</p>
-                                    <p>Computer Engineering, 22</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Interest:</strong>
-                                            적어
-                                        </li>
-                                        <li>
-                                            <strong>project: </strong>
-                                            ㅇㅇ
-                                        </li>
-                                        <li>
-                                            <strong>E-mail:</strong>
-                                            ㅇㅇ
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        닫기
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
 
 
