Add: LSM16 image && intro card

--- a/index.html
+++ b/index.html
@@ -194,14 +194,20 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">신예찬</div>
-                        <div class="portfolio-caption-subheading text-muted">UnderGraduate</div>
+                        <div class="portfolio-caption-subheading text-muted">18, UnderGraduate</div>
                     </div>
                 </div>
             </div>
-                <!-- Portfolio item 2-->
-  
-
-
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                            <img class="img-fluid" src="assets/img/grad/16이상민.jpeg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">이상민</div>
+                            <div class="portfolio-caption-subheading text-muted">16, UnderGraduate</div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
 </section>
