Add: NBU17 image && intro card

--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="portfolio-item">
+                        <img class="img-fluid" src="assets/img/grad/17남병욱선배님.jpeg" alt="..." />
+                    </a>
+                    <div class="portfolio-caption">
+                        <div class="portfolio-caption-heading">남병욱</div>
+                        <div class="portfolio-caption-subheading text-muted">17, UnderGraduate</div>
+                    </div>
+                </div>
+            </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/grad/16이상민.jpeg" alt="..." />
