--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">엄성준</h2>
-                                    <p class="item-intro text-muted">UnderGraduate</p>
+                                    <p class="item-intro text-muted">UnderGraduate, Lab Leader</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
                                     <p>Computer Engineering, 22</p>
                                     <ul class="list-inline">
