--- a/index.html
+++ b/index.html
@@ -184,17 +184,17 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Old member</h2>
-            <h3 class="section-subheading text-muted">존경스러운 선배님들이십니다.</h3>
+            <h3 class="section-subheading text-muted">존경스러운 졸업생입니다.</h3>
         </div>
         <div class="row">
+
             <div class="col-lg-4 col-sm-6 mb-4">
-                <!-- Portfolio item 1-->
                 <div class="portfolio-item">
-                        <img class="img-fluid" src="assets/img/grad/1.jpg" alt="..." />
+                        <img class="img-fluid" src="assets/img/grad/16이상민.jpeg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">신예찬</div>
-                        <div class="portfolio-caption-subheading text-muted">18, UnderGraduate</div>
+                        <div class="portfolio-caption-heading">이상민</div>
+                        <div class="portfolio-caption-subheading text-muted">15, UnderGraduate</div>
                     </div>
                 </div>
             </div>
@@ -209,15 +209,17 @@
                 </div>
             </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 1-->
                     <div class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/grad/16이상민.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/grad/1.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">이상민</div>
-                            <div class="portfolio-caption-subheading text-muted">15, UnderGraduate</div>
+                            <div class="portfolio-caption-heading">신예찬</div>
+                            <div class="portfolio-caption-subheading text-muted">18, UnderGraduate</div>
                         </div>
                     </div>
                 </div>
+                
         </div>
     </div>
 </section>
