Edit: um's card

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">엄성준</div>
-                        <div class="portfolio-caption-subheading text-muted">UnderGraduate</div>
+                        <div class="portfolio-caption-subheading text-muted">UnderGraduate, Lab Leader</div>
                     </div>
                 </div>
             </div>
