--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
             </div>
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
+                        <img class="img-fluid" src="assets/img/grad/16박성재.jpeg" alt="..." />
+                    </a>
+                    <div class="portfolio-caption">
+                        <div class="portfolio-caption-heading">박성재</div>
+                        <div class="portfolio-caption-subheading text-muted">16, UnderGraduate</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="portfolio-item">
                         <img class="img-fluid" src="assets/img/grad/17남병욱선배님.jpeg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
