Add: lgo14 addad

--- a/index.html
+++ b/index.html
@@ -187,7 +187,16 @@
             <h3 class="section-subheading text-muted">존경스러운 졸업생입니다.</h3>
         </div>
         <div class="row">
-
+            <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="portfolio-item">
+                        <img class="img-fluid" src="assets/img/grad/14이광오.jpeg" alt="..." />
+                    </a>
+                    <div class="portfolio-caption">
+                        <div class="portfolio-caption-heading">이광오</div>
+                        <div class="portfolio-caption-subheading text-muted">14, UnderGraduate</div>
+                    </div>
+                </div>
+            </div>
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
                         <img class="img-fluid" src="assets/img/grad/16이상민.jpeg" alt="..." />
