--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">이용현</h2>
+                                <h2 class="text-uppercase">이용현</h2> <!-- -->
                                 <p class="item-intro text-muted">UnderGraduate</p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
                                 <p>Computer Engineering, 22</p>
